Modification EventDto by adding eventId to the response.